--- a/index..html
+++ b/index..html
@@ -12,4 +12,5 @@
 <script src="js/tip1.js"></script>
 <script src="js/tip2.js"></script>
 <script src="js/tip3.js"></script>
+<script src="js/tip4.js"></script>
 </html>
