--- a/index..html
+++ b/index..html
@@ -13,4 +13,5 @@
 <script src="js/tip2.js"></script>
 <script src="js/tip3.js"></script>
 <script src="js/tip4.js"></script>
+<script src="js/tip5.js"></script>
 </html>
