--- a/index..html
+++ b/index..html
@@ -14,4 +14,5 @@
 <script src="js/tip3.js"></script>
 <script src="js/tip4.js"></script>
 <script src="js/tip5.js"></script>
+<script src="js/tip6.js"></script>
 </html>
